# MomentumX

./: .clang-format  .dockerignore  .gitignore  .momentumrc  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build.py  copy.py  increment_reader.py  increment_slow_reader.py  increment_writer.py  momentum.cpp  momentum.h  momentum.py  pyproject.toml  reader.py  requirements.txt  setup.py  stream_reader.py  stream_writer.py  test.py  testc.py  testp.py  writer.py
.github/workflows/: wheels.yml
client/: momentum_client.py  one_two_three.py  summer.py
examples/: benchmark.py  inspect_running.py  multi.py  multiproc.py  stream_reader.py  stream_writer.py  sync_reader.py  sync_writer.py  threaded.py
ext/: binding.cpp  buffer.cpp  buffer.h  context.cpp  context.h  control.cpp  control.h  inspector.h  momentumx.cpp  momentumx.h  stream.cpp  stream.h  utils.h
libmomentum/: Makefile  momentum.cpp  momentum.h
momentum/: __init__.py  api.py  benchmark.py  blocking_reader.py  blocking_slow_reader.py  blocking_writer.py  demo.py  momentum.py  processor.py  route.py  runtime.py  stream.py  stream_reader.py  stream_writer.py
momentum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
momentum/ext/: buffer.h  context.h  momentum.cpp  momentum.h  stream.h  utils.h
momentumx/: __init__.py  momentumx.py
momentumx/ext/: buffer.h  context.h  momentumx.cpp  momentumx.h
package/: Dockerfile.jammy  Dockerfile.kinetic  Dockerfile.rocky8  Dockerfile.rocky9
src/momentumx/: __init__.py  _mx.pyi
tests/: blocking_reader.py  blocking_writer.py  cxx_test.cpp  test_echo.py  test_scenarios.py  test_unit.py
