[build-system]
requires = ["setuptools", "mypy", "pybind11", "scikit-build", "cmake", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "MomentumX"
description = "Zero-copy shared memory IPC library for building complex streaming data pipelines capable of processing large datasets"
version = "1.3.2"
authors = [
    { email = "opensource@captivation.us" }
]
requires-python = ">=3.7"

[tool.setuptools.packages.find]
where = ["src"] 
include = ["momentumx"]

[project.optional-dependencies]
tests = ["pytest"]